--- a/src/main/resources/MainScreenFrame.fxml
+++ b/src/main/resources/MainScreenFrame.fxml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<fx:root minHeight="500.0" minWidth="600.0" type="BorderPane" xmlns="http://javafx.com/javafx/8.0.60"
-         xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<fx:root minHeight="500.0" minWidth="600.0" type="BorderPane" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
     <center>
-        <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="400.0" tabClosingPolicy="UNAVAILABLE"
-                 BorderPane.alignment="CENTER"/>
+        <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="400.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER" />
     </center>
     <bottom>
         <GridPane prefHeight="40.0" prefWidth="400.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Button fx:id="btnAddCity" mnemonicParsing="false" onAction="#addCity" prefHeight="31.0"
-                        prefWidth="186.0" text="Fonder une ville" textAlignment="CENTER"/>
-                <Button fx:id="btnEndTurn" disable="true" mnemonicParsing="false" onAction="#endTurn" prefHeight="31.0"
-                        prefWidth="166.0" text="Finir tour" textAlignment="CENTER" GridPane.columnIndex="3"
-                        GridPane.halignment="RIGHT"/>
+                <Button fx:id="btnAddCity" mnemonicParsing="false" onAction="#addCity" prefHeight="31.0" prefWidth="186.0" text="Fonder une ville" textAlignment="CENTER" />
+                <Button fx:id="btnEndTurn" disable="true" mnemonicParsing="false" onAction="#endTurn" prefHeight="31.0" prefWidth="166.0" text="Finir tour" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.halignment="RIGHT" />
             </children>
         </GridPane>
     </bottom>
@@ -33,8 +36,8 @@
             <menus>
                 <Menu mnemonicParsing="false" text="Menu">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#addCity" text="Fonder une ville"/>
-                        <MenuItem mnemonicParsing="false" text="Fermer"/>
+                        <MenuItem mnemonicParsing="false" onAction="#addCity" text="Fonder une ville" />
+                        <MenuItem mnemonicParsing="false" text="Fermer" />
                     </items>
                 </Menu>
             </menus>
